[gd_scene load_steps=20 format=2]

[ext_resource path="res://actors/enemies/ranged_sentry_drone/ranged_sentry_drone.gd" type="Script" id=1]
[ext_resource path="res://actors/shared/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/shared/FlashManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/shared/physics_managers/PhysicsManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/enemies/AggroManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/enemies/ranged_sentry_drone/textures/ranged-sentry-drone.png" type="Texture" id=6]
[ext_resource path="res://actors/enemies/ranged_sentry_drone/states/idle.gd" type="Script" id=7]
[ext_resource path="res://actors/enemies/ranged_sentry_drone/states/alerted.gd" type="Script" id=8]
[ext_resource path="res://actors/enemies/ranged_sentry_drone/states/unalerted.gd" type="Script" id=9]
[ext_resource path="res://actors/enemies/ReactSprite.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/enemies/ranged_sentry_drone/states/shoot.gd" type="Script" id=11]
[ext_resource path="res://actors/enemies/projectiles/ProjectileSpawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://actors/enemies/ranged_sentry_drone/states/follow_player.gd" type="Script" id=13]
[ext_resource path="res://actors/enemies/ranged_sentry_drone/states/fly_to_point.gd" type="Script" id=14]
[ext_resource path="res://actors/enemies/ranged_sentry_drone/states/die.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 2 )

[sub_resource type="Animation" id=2]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 6 )

[node name="RangedSentryDrone" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 516
script = ExtResource( 1 )

[node name="Health" parent="." instance=ExtResource( 2 )]
MAX_HEALTH = 4

[node name="FlashManager" parent="." instance=ExtResource( 3 )]
sprite_path = NodePath("../Sprite")
total_duration = 0.3
single_flash_duration = 0.075
flash_color = Color( 1, 1, 1, 1 )

[node name="PhysicsManager" parent="." instance=ExtResource( 4 )]
movement_speed_tiles_per_second = 4.0

[node name="AggroManager" parent="." instance=ExtResource( 5 )]
visible = false
aggro_radius_tiles = 4.0
unaggro_radius_tiles = 6.0

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="IdleDurationTimer" type="Timer" parent="States/Idle"]

[node name="FlyToPoint" type="Node" parent="States"]
script = ExtResource( 14 )

[node name="Alerted" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="AlertedDurationTimer" type="Timer" parent="States/Alerted"]

[node name="Unalerted" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="UnalertedDurationTimer" type="Timer" parent="States/Unalerted"]

[node name="TurnAroundDurationTimer" type="Timer" parent="States/Unalerted"]

[node name="FollowPlayer" type="Node" parent="States"]
script = ExtResource( 13 )

[node name="ShootTimer" type="Timer" parent="States/FollowPlayer"]

[node name="Shoot" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="ShootDurationTimer" type="Timer" parent="States/Shoot"]

[node name="Die" type="Node" parent="States"]
script = ExtResource( 15 )

[node name="ReactSprite" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, -18 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 272

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -1 )
shape = SubResource( 4 )

[node name="ProjectileSpawner" parent="." instance=ExtResource( 12 )]
